change sms: call to imessage://
``sms:`` is meant strictly for phone numbers and seems to force enable MMS when used on email addresses (assuming it even works in the first place). however, the ``imessage://`` protocol (strictly for Apple devices) seems to call up Apple Messages and start a new iMessage thread just fine on iOS 17.4 Dev Beta. this will require some testing before it gets pulled, but it seems to be a good enough replacement.

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                                         address</button>
                                 </div>
                                 <div>
-                                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
+                                    <a class="socialMedia imessage" href="imessage://adnan@aridan.net">Send an iMessage</a>
                                 </div>
                             </div>
                         </div>
